# netLink

./: .gitignore  .travis.yml  CMakeLists.txt  Core.cpp  Core.h  Doxyfile  Makefile  MsgPack.cpp  MsgPackIntegers.cpp  README.md  Socket.cpp  SocketManager.cpp  msgpack.org.md  netLink.h
.github/workflows/: actions.yml
MSVS/: netLink.vcxproj  netLink.vcxproj.filters
doc/: Doxyfile  MsgPack.html  MsgPack.txt  _container_8h_source.html  _container_header_8h_source.html  _core_8h_source.html  _data_8h_source.html  _element_8h_source.html  _header_8h_source.html  _msg_pack_8h_source.html  _msg_pack_socket_8h_source.html  _number_8h_source.html  _primitive_8h_source.html  _socket_8h_source.html  _socket_manager_8h_source.html  _stream_manager_8h_source.html  _utf8_8h_source.html  annotated.html  class_msg_pack_1_1_array-members.html  class_msg_pack_1_1_array.html  class_msg_pack_1_1_array_header-members.html  class_msg_pack_1_1_array_header.html  class_msg_pack_1_1_binary-members.html  class_msg_pack_1_1_binary.html  class_msg_pack_1_1_data-members.html  class_msg_pack_1_1_data.html  class_msg_pack_1_1_deserializer-members.html  class_msg_pack_1_1_deserializer.html  class_msg_pack_1_1_element-members.html  class_msg_pack_1_1_element.html  class_msg_pack_1_1_extended-members.html  class_msg_pack_1_1_extended.html  class_msg_pack_1_1_header-members.html  class_msg_pack_1_1_header.html  class_msg_pack_1_1_map-members.html  class_msg_pack_1_1_map.html  class_msg_pack_1_1_map_header-members.html  class_msg_pack_1_1_map_header.html  class_msg_pack_1_1_number-members.html  class_msg_pack_1_1_number.html  (+30 more)
doc/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_61.js  all_62.js  all_65.js  all_67.js  all_68.js  all_6f.js  all_7.js  all_70.js  all_73.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_61.js  classes_68.js  classes_7.js  classes_8.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  (+45 more)
examples/: tcp.cpp  udp.cpp
include/: Container.h  ContainerHeader.h  Core.h  Data.h  Element.h  Exception.h  Header.h  MsgPack.h  MsgPackSocket.h  Number.h  Primitive.h  Socket.h  SocketManager.h  StreamManager.h  Utf8.h  netLink.h
src/: MsgPack.cpp  Socket.cpp  SocketManager.cpp  Utf8.cpp
src/examples/: tcp.cpp  udp.cpp
